Bug 346976 - Plan crashed when creating a new one
Summary: Plan crashed when creating a new one
Status: RESOLVED FIXED
Alias: None
Product: calligraplan
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Friedrich W. H. Kossebau
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2015-04-30 19:11 UTC by Javier
Modified: 2016-08-23 12:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.9.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Javier 2015-04-30 19:11:14 UTC
Application: calligraplan (2.9.2)
KDE Platform Version: 4.14.6
Qt Version: 4.8.6
Operating System: Linux 3.19.0-15-generic x86_64
Distribution: Ubuntu 15.04

-- Information about the crash:
- What I was doing when the application crashed:
With a empty plan project openned (I migth be the simple one given as an exampl) select file > New. When selecting this option menu it crashed.

Using Updated version of Kubuntu 15.04

-- Backtrace:
Application: Plan (calligraplan), signal: Segmentation fault
Using host libthread_db library "/lib/x86_64-linux-gnu/libthread_db.so.1".
[Current thread is 1 (Thread 0x7fb7050b27c0 (LWP 2957))]

Thread 3 (Thread 0x7fb6e4502700 (LWP 2958)):
#0  0x00007fb704a078dd in poll () at ../sysdeps/unix/syscall-template.S:81
#1  0x00007fb6ff98eebc in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#2  0x00007fb6ff98efcc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#3  0x00007fb7030fa82e in QEventDispatcherGlib::processEvents (this=0x7fb6dc0008e0, flags=...) at kernel/qeventdispatcher_glib.cpp:452
#4  0x00007fb7030c9cd1 in QEventLoop::processEvents (this=this@entry=0x7fb6e4501dc0, flags=...) at kernel/qeventloop.cpp:149
#5  0x00007fb7030ca035 in QEventLoop::exec (this=this@entry=0x7fb6e4501dc0, flags=...) at kernel/qeventloop.cpp:204
#6  0x00007fb702fbde89 in QThread::exec (this=this@entry=0x1b887b0) at thread/qthread.cpp:538
#7  0x00007fb7030aa443 in QInotifyFileSystemWatcherEngine::run (this=0x1b887b0) at io/qfilesystemwatcher_inotify.cpp:265
#8  0x00007fb702fc06ff in QThreadPrivate::start (arg=0x1b887b0) at thread/qthread_unix.cpp:349
#9  0x00007fb6ffe746aa in start_thread (arg=0x7fb6e4502700) at pthread_create.c:333
#10 0x00007fb704a12eed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 2 (Thread 0x7fb6dbfff700 (LWP 2964)):
#0  pthread_cond_wait@@GLIBC_2.3.2 () at ../sysdeps/unix/sysv/linux/x86_64/pthread_cond_wait.S:185
#1  0x00007fb6e864ea7a in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#2  0x00007fb6e864eaa9 in ?? () from /usr/lib/x86_64-linux-gnu/libQtScript.so.4
#3  0x00007fb6ffe746aa in start_thread (arg=0x7fb6dbfff700) at pthread_create.c:333
#4  0x00007fb704a12eed in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:109

Thread 1 (Thread 0x7fb7050b27c0 (LWP 2957)):
[KCrash Handler]
#6  0x0000000000000040 in ?? ()
#7  0x00007fb7030d1e09 in QMetaObject::cast (this=0x7fb6ee56bd60 <KPlato::Resource::staticMetaObject>, obj=0x1907690) at kernel/qmetaobject.cpp:274
#8  0x00007fb6edfaf3e3 in qobject_cast<KPlato::Resource*> (object=<optimized out>) at /usr/include/qt4/QtCore/qobject.h:380
#9  KPlato::ResourceItemModel::parent (this=0x1eafbe0, index=...) at /build/buildd/calligra-2.9.2/plan/libs/models/kptresourcemodel.cpp:715
#10 0x00007fb70408f281 in parent (this=0x7ffe9dc3fde0) at ../../include/QtCore/../../src/corelib/kernel/qabstractitemmodel.h:393
#11 QSortFilterProxyModelPrivate::source_to_proxy (this=0x1eaf730, source_index=...) at itemviews/qsortfilterproxymodel.cpp:386
#12 0x00007fb70408f59d in mapFromSource (sourceIndex=..., this=<optimized out>) at itemviews/qsortfilterproxymodel.cpp:2531
#13 QSortFilterProxyModel::parent (this=<optimized out>, child=...) at itemviews/qsortfilterproxymodel.cpp:1677
#14 0x00007fb704046518 in parent (this=0x22362c8) at ../../include/QtCore/../../src/corelib/kernel/qabstractitemmodel.h:393
#15 QTreeView::drawRow (this=0x203b350, painter=0x7ffe9dc402e0, option=..., index=...) at itemviews/qtreeview.cpp:1527
#16 0x00007fb704049681 in QTreeView::drawTree (this=this@entry=0x203b350, painter=painter@entry=0x7ffe9dc402e0, region=...) at itemviews/qtreeview.cpp:1438
#17 0x00007fb70404d676 in QTreeView::paintEvent (this=0x203b350, event=0x7ffe9dc409f0) at itemviews/qtreeview.cpp:1270
#18 0x00007fb703b2adc8 in QWidget::event (this=0x203b350, event=0x7ffe9dc409f0) at kernel/qwidget.cpp:8775
#19 0x00007fb703ef160e in QFrame::event (this=0x203b350, e=0x7ffe9dc409f0) at widgets/qframe.cpp:557
#20 0x00007fb70400f163 in QAbstractItemView::viewportEvent (this=this@entry=0x203b350, event=event@entry=0x7ffe9dc409f0) at itemviews/qabstractitemview.cpp:1644
#21 0x00007fb704051950 in QTreeView::viewportEvent (this=0x203b350, event=0x7ffe9dc409f0) at itemviews/qtreeview.cpp:1252
#22 0x00007fb7030cb2e6 in QCoreApplicationPrivate::sendThroughObjectEventFilters (this=this@entry=0x180a580, receiver=receiver@entry=0x21bd6f0, event=event@entry=0x7ffe9dc409f0) at kernel/qcoreapplication.cpp:1065
#23 0x00007fb703ad799c in QApplicationPrivate::notify_helper (this=this@entry=0x180a580, receiver=receiver@entry=0x21bd6f0, e=e@entry=0x7ffe9dc409f0) at kernel/qapplication.cpp:4566
#24 0x00007fb703ade4d8 in QApplication::notify (this=0x7ffe9dc42220, receiver=receiver@entry=0x21bd6f0, e=e@entry=0x7ffe9dc409f0) at kernel/qapplication.cpp:4356
#25 0x00007fb704655067 in KoApplication::notify (this=<optimized out>, receiver=0x21bd6f0, event=0x7ffe9dc409f0) at /build/buildd/calligra-2.9.2/libs/main/KoApplication.cpp:623
#26 0x00007fb7030cb17d in QCoreApplication::notifyInternal (this=0x7ffe9dc42220, receiver=receiver@entry=0x21bd6f0, event=event@entry=0x7ffe9dc409f0) at kernel/qcoreapplication.cpp:955
#27 0x00007fb703b2549d in sendSpontaneousEvent (event=0x7ffe9dc409f0, receiver=0x21bd6f0) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:234
#28 QWidgetPrivate::drawWidget (this=this@entry=0x4eab110, pdev=pdev@entry=0x1ab9cd0, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=0x1ac38d0) at kernel/qwidget.cpp:5599
#29 0x00007fb703b25f65 in QWidgetPrivate::paintSiblingsRecursive (this=this@entry=0x226c780, pdev=pdev@entry=0x1ab9cd0, siblings=..., index=<optimized out>, index@entry=1, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1ac38d0) at kernel/qwidget.cpp:5808
#30 0x00007fb703b25ddd in QWidgetPrivate::paintSiblingsRecursive (this=this@entry=0x226c780, pdev=pdev@entry=0x1ab9cd0, siblings=..., index=1, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1ac38d0) at kernel/qwidget.cpp:5795
#31 0x00007fb703b2500a in QWidgetPrivate::drawWidget (this=this@entry=0x226c780, pdev=pdev@entry=0x1ab9cd0, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=0x1ac38d0) at kernel/qwidget.cpp:5652
#32 0x00007fb703b25f65 in QWidgetPrivate::paintSiblingsRecursive (this=this@entry=0x2452ff0, pdev=pdev@entry=0x1ab9cd0, siblings=..., index=<optimized out>, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1ac38d0) at kernel/qwidget.cpp:5808
#33 0x00007fb703b2500a in QWidgetPrivate::drawWidget (this=this@entry=0x2452ff0, pdev=pdev@entry=0x1ab9cd0, rgn=..., offset=..., flags=flags@entry=4, sharedPainter=sharedPainter@entry=0x0, backingStore=0x1ac38d0) at kernel/qwidget.cpp:5652
#34 0x00007fb703b25f65 in QWidgetPrivate::paintSiblingsRecursive (this=this@entry=0x1a73890, pdev=pdev@entry=0x1ab9cd0, siblings=..., index=<optimized out>, index@entry=32, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1ac38d0) at kernel/qwidget.cpp:5808
#35 0x00007fb703b25ddd in QWidgetPrivate::paintSiblingsRecursive (this=this@entry=0x1a73890, pdev=pdev@entry=0x1ab9cd0, siblings=..., index=32, index@entry=33, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1ac38d0) at kernel/qwidget.cpp:5795
#36 0x00007fb703b25ddd in QWidgetPrivate::paintSiblingsRecursive (this=this@entry=0x1a73890, pdev=pdev@entry=0x1ab9cd0, siblings=..., index=33, index@entry=34, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1ac38d0) at kernel/qwidget.cpp:5795
#37 0x00007fb703b25ddd in QWidgetPrivate::paintSiblingsRecursive (this=this@entry=0x1a73890, pdev=pdev@entry=0x1ab9cd0, siblings=..., index=34, rgn=..., offset=..., flags=4, sharedPainter=0x0, backingStore=0x1ac38d0) at kernel/qwidget.cpp:5795
#38 0x00007fb703b2500a in QWidgetPrivate::drawWidget (this=0x1a73890, pdev=0x1ab9cd0, rgn=..., offset=..., flags=flags@entry=5, sharedPainter=sharedPainter@entry=0x0, backingStore=0x1ac38d0) at kernel/qwidget.cpp:5652
#39 0x00007fb703cfb0d5 in QWidgetBackingStore::sync (this=0x1ac38d0) at painting/qbackingstore.cpp:1373
#40 0x00007fb703b19bc0 in QWidgetPrivate::syncBackingStore (this=0x1a73890) at kernel/qwidget.cpp:1894
#41 0x00007fb703b2ae98 in QWidget::event (this=0x19ff690, event=0x27edc10) at kernel/qwidget.cpp:8693
#42 0x00007fb703f0b8e3 in QMainWindow::event (this=this@entry=0x19ff690, event=event@entry=0x27edc10) at widgets/qmainwindow.cpp:1478
#43 0x00007fb700a52e81 in KMainWindow::event (this=this@entry=0x19ff690, ev=ev@entry=0x27edc10) at ../../kdeui/widgets/kmainwindow.cpp:1126
#44 0x00007fb700a8eb09 in KXmlGuiWindow::event (this=0x19ff690, ev=0x27edc10) at ../../kdeui/xmlgui/kxmlguiwindow.cpp:126
#45 0x00007fb703ad79bc in QApplicationPrivate::notify_helper (this=this@entry=0x180a580, receiver=receiver@entry=0x19ff690, e=e@entry=0x27edc10) at kernel/qapplication.cpp:4570
#46 0x00007fb703ade4d8 in QApplication::notify (this=0x7ffe9dc42220, receiver=receiver@entry=0x19ff690, e=e@entry=0x27edc10) at kernel/qapplication.cpp:4356
#47 0x00007fb704655067 in KoApplication::notify (this=<optimized out>, receiver=0x19ff690, event=0x27edc10) at /build/buildd/calligra-2.9.2/libs/main/KoApplication.cpp:623
#48 0x00007fb7030cb17d in QCoreApplication::notifyInternal (this=0x7ffe9dc42220, receiver=receiver@entry=0x19ff690, event=event@entry=0x27edc10) at kernel/qcoreapplication.cpp:955
#49 0x00007fb7030cea21 in sendEvent (event=0x27edc10, receiver=0x19ff690) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:231
#50 QCoreApplicationPrivate::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0, data=0x1762ae0) at kernel/qcoreapplication.cpp:1579
#51 0x00007fb7030ceeb3 in QCoreApplication::sendPostedEvents (receiver=receiver@entry=0x0, event_type=event_type@entry=0) at kernel/qcoreapplication.cpp:1472
#52 0x00007fb7030fa69e in sendPostedEvents () at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:236
#53 postEventSourceDispatch (s=0x180bc00) at kernel/qeventdispatcher_glib.cpp:300
#54 0x00007fb6ff98ec3d in g_main_context_dispatch () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#55 0x00007fb6ff98ef20 in ?? () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#56 0x00007fb6ff98efcc in g_main_context_iteration () from /lib/x86_64-linux-gnu/libglib-2.0.so.0
#57 0x00007fb7030fa80e in QEventDispatcherGlib::processEvents (this=0x1764460, flags=...) at kernel/qeventdispatcher_glib.cpp:450
#58 0x00007fb703b7fc66 in QGuiEventDispatcherGlib::processEvents (this=<optimized out>, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#59 0x00007fb7030c9cd1 in QEventLoop::processEvents (this=this@entry=0x7ffe9dc421a0, flags=...) at kernel/qeventloop.cpp:149
#60 0x00007fb7030ca035 in QEventLoop::exec (this=this@entry=0x7ffe9dc421a0, flags=...) at kernel/qeventloop.cpp:204
#61 0x00007fb7030cfab9 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1227
#62 0x00007fb703ad5c1c in QApplication::exec () at kernel/qapplication.cpp:3828
#63 0x00007fb704cd7945 in kdemain (argc=<optimized out>, argv=<optimized out>) at /build/buildd/calligra-2.9.2/plan/main.cpp:73
#64 0x00007fb70492ca40 in __libc_start_main (main=0x4006d0 <main(int, char**)>, argc=1, argv=0x7ffe9dc42368, init=<optimized out>, fini=<optimized out>, rtld_fini=<optimized out>, stack_end=0x7ffe9dc42358) at libc-start.c:289
#65 0x0000000000400709 in _start ()

Reported using DrKonqi
Comment 1 Dag Andersen 2016-08-23 12:19:36 UTC
Git commit b25d46bf9fa6d5b9ff34115edb4719592c191935 by Dag Andersen.
Committed on 23/08/2016 at 06:22.
Pushed by danders into branch 'calligra/2.9'.

Backport: Plan: Avoid crash in special cases

Sometimes (eg. when New is pressed) the Project can be deleted before models
and thus cause a crash.
Added a Project::aboutToBeDeleted signal so models can adjust.
FIXED_IN: 2.9.12

M  +1    -0    plan/libs/kernel/kptproject.cpp
M  +2    -0    plan/libs/kernel/kptproject.h
M  +2    -0    plan/libs/models/kptaccountsmodel.cpp
M  +4    -0    plan/libs/models/kptcalendarmodel.cpp
M  +5    -0    plan/libs/models/kptitemmodelbase.cpp
M  +1    -0    plan/libs/models/kptitemmodelbase.h
M  +2    -0    plan/libs/models/kptnodechartmodel.cpp
M  +4    -0    plan/libs/models/kptnodeitemmodel.cpp
M  +4    -0    plan/libs/models/kptpertcpmmodel.cpp
M  +2    -0    plan/libs/models/kptrelationmodel.cpp
M  +2    -0    plan/libs/models/kptresourceallocationmodel.cpp
M  +8    -0    plan/libs/models/kptresourceappointmentsmodel.cpp
M  +7    -5    plan/libs/models/kptresourcemodel.cpp
M  +13   -0    plan/libs/models/kptschedulemodel.cpp
M  +2    -0    plan/libs/models/kptschedulemodel.h
M  +2    -0    plan/libs/models/kpttaskstatusmodel.cpp

http://commits.kde.org/calligra/b25d46bf9fa6d5b9ff34115edb4719592c191935