Backport: Plan: Avoid crash in special cases

Sometimes (eg. when New is pressed) the Project can be deleted before models
and thus cause a crash.
Added a Project::aboutToBeDeleted signal so models can adjust.

BUG: 346976
FIXED_IN: 2.9.12