plan/libs/models/kptitemmodelbase.cpp
@@ -731,6 +731,11 @@ bool ItemModelBase::setData( const QModelIndex &index, const QVariant &value, in
     return false;
 }
 
+void ItemModelBase::projectDeleted()
+{
+    setProject(0);
+}
+
 } //namespace KPlato
 
 #include "kptitemmodelbase.moc"
